apps/cms-server/modules/asset/ui/src/scss/_news.scss
.news-overview-header {
  margin-block-end: 2rem;
}

.news {
  &-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-gap: 20px;
    list-style: none;
    padding: 0;
    margin: 0;
  }

  &-card {
    position: relative;
    text-decoration: none;
    border: solid 1px #f0f4f8;
    border-radius: 5px;
    overflow: clip;
    height: 100%;

    figure {
      height: 200px;
      margin: 0;

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center;
      }
    }

    .card-content {
      padding: 1rem;
      color: #333;

      .date {
        font-size: 0.8rem;
        color: #585858;
      }

      h2 {
        font-size: 1.5rem;
        margin: 0;
        color: inherit;

        a {
          color: inherit;
          text-decoration: none;

          &:hover,
          &:focus-visible {
            text-decoration: underline;
          }
        }
      }

      p {
        margin-block-start: 0.25rem;
        margin-block-end: 0;
        color: inherit;
        display: -webkit-box;
        -webkit-line-clamp: 3;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }
}

// detail page
.news-detail-header {
  figure {
    height: 400px;
    margin: 0;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
    }
  }
}

.news-detail-sidebar {
  height: 100%;
  padding: 1rem;
  background: var(--nlds-default-background-color);

  .share-links .link-container {
    flex-wrap: wrap;
  }
}

.news-detail-title {
  margin-block-start: 2rem;
}

